--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #slider{
     -webkit-appearance: none;
     appearance: none;
-    width:100%; height:25px; background: #d3d3d3;
+    width:350px; height:25px; background: #d3d3d3;
     
 }
 #slider::-webkit-slider-thumb{
