--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+#first_map{
+    margin-left: -8%;
+    margin-top: 3%;
+}
+
 #slider{
     -webkit-appearance: none;
     appearance: none;
@@ -8,3 +13,15 @@
     -webkit-appearance: none;
     width: 25px; height:25px; background:orange;
 }
+
+#bubble {
+    background: steelblue;
+    color: white;
+    padding: 4px 12px;
+    border-radius: 4px;
+  }
+  #bubble::after {
+    width: 2px;
+    height: 2px;
+    background: red;
+  }
